--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
+    "@types/react-redux": "^6.0.1",
+    "@types/react-virtualized": "^9.18.3",
     "@types/redux": "^3.6.0",
     "codecov": "^3.0.2",
     "jest": "^23.1.0",
@@ -48,6 +50,8 @@
     "oni-core-logging": "^1.0.0",
     "oni-core-redux": "^1.0.0",
     "oni-types": "^0.0.8",
+    "react-redux": "^5.0.7",
+    "react-virtualized": "^9.19.1",
     "redux": "^4.0.0",
     "vscode-languageserver-types": "^3.8.0"
   }
