--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.16",
-    "@types/react-redux": "^6.0.1",
+    "@types/react-redux": "6.0.0",
     "@types/react-virtualized": "^9.18.3",
     "@types/redux": "^3.6.0",
     "codecov": "^3.0.2",
